Fix overflowing message box issue

--- a/src/assets/scss/core/elements/chat/_interactions.scss
+++ b/src/assets/scss/core/elements/chat/_interactions.scss
@@ -12,6 +12,7 @@ $root: &;
 	justify-content: space-between;
 	padding: 0 1em;
 	// border-top: solid 1px rgba(0, 0, 0, 0.1);
+	overflow: auto;
 }
 
 /*
